--- a/Assign1/Part A/page2.html
+++ b/Assign1/Part A/page2.html
@@ -7,10 +7,10 @@
     </head>
     <body>
     <form class="form">
-        <div class="messagebox">
+        <!-- <div class="messagebox">
             <label for="msg">Special Instructions</label>
             <textarea id="msg"></textarea><br>
-        </div>
+        </div> -->
         <div class="orderdeets">
             <label for ="drinks">Choose a drink</label>
             <select id="drinks" name="drinks">
@@ -31,11 +31,12 @@
             <input type="text" id="name"><br>
         
             <label for="email">Address</label>
-            <input type="text" id="email"><br>
+            <textarea id="email"></textarea><br>
+
+            <div class="orderbutton">
+                <button type="submit">Place order</button>
+            </div>
         </div> 
-        <div class="orderbutton">
-            <button type="submit">Place order</button>
-        </div>
     </form>
     <div>
         <a href="ex1.html">Home Page</a>
