--- a/Assign1/Part B/webPage2.html
+++ b/Assign1/Part B/webPage2.html
@@ -6,22 +6,24 @@
         </title>
         <link rel="stylesheet" href="web2.css">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     </head>
     <header>
         <h2>
             AudioBooks
         </h2>
     </header>
+    <body>
+        
     <div class = "flex-item">
         <div class="classics">
-            AudioBooks - Stream your favorite audiobooks and podcast here.
+            <b><i>Stream your favorite audiobooks and podcast here.</i></b>
             <audio controls autoplay class="audio">
                 <source src="videos/See What Listening to Audible Can Do For You _Great Escape_.mp3" type="audio/mpeg">
             </audio>
         </div>
         <div class="videos">
-        <video controls>
-        <source src="videos/Short Story _ Araby by James Joyce Audiobook.mp4"></video>
+        <video controls><source src="videos/Short Story _ Araby by James Joyce Audiobook.mp4"></video>
         <video controls><source src="videos/TOLSTOY - The Three Questions by Leo Tolstoy - Short story audiobook - FAB.mp4"></video>
         <video controls><source src="videos/The Beggar by Anton Chekhov (Audiobook) _ SHORT STORY.mp4"></video>
         </div>
@@ -29,10 +31,17 @@
     <div class="homepage">
         <a href="web2.html">Home Page</a>
     </div>
+</body>
     <footer>
         About:
         Giving you a glimpse of the audiobook experience. Feedback is much appreciated!<br>
         Contact : xyz@email.com <br>
-        © Copyright 1997 - 2023 Audible Inc. 
+        © Copyright 1997 - 2023 Audible Inc.
+        <div class="socialmedia">
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-pinterest"></a>
+            <a href="#" class="fa fa-reddit"></a>
+        </div>
     </footer>
+
 </html>
